tests/baselines/reference/assignFromBooleanInterface.errors.txt
==== tests/cases/compiler/assignFromBooleanInterface.ts (1 errors) ====
    var x = true;
    var a: Boolean;
    x = a;
    ~
!!! assignFromBooleanInterface.ts(3,1): error TS2011: Type 'Boolean' is not assignable to type 'boolean'.
    a = x;